fixed the mobile overflow-x issue

--- a/css/style.css
+++ b/css/style.css
@@ -57,8 +57,6 @@ body {
   background-image: url(../images/bg-tablet-pattern.svg);
   background-position: 80px -270px;
   background-repeat: no-repeat;
-
-  overflow-x: hidden; /*? */
 }
 
 @media (min-width: 45.1em) {
@@ -134,6 +132,10 @@ select {
   padding-inline: 2.5em;
   margin-inline: auto;
   max-width: 80rem;
+}
+
+.overflow-x-hide {
+  overflow-x: hidden;
 }
 
 .sr-only {
@@ -271,7 +273,7 @@ select {
 }
 
 @media (max-width: 45em) {
-  .body::before {
+  body::before {
     content: "";
     position: fixed;
     inset: 0;
@@ -286,7 +288,7 @@ select {
     transition: opacity 500ms ease-in-out;
   }
 
-  .body.overlay-active::before {
+  body.overlay-active::before {
     opacity: 1;
   }
 
